--- a/cv.html
+++ b/cv.html
@@ -28,6 +28,7 @@
                 <h2>Mon expérience</h2>
                 <ul>
                     <li>Stage Super U 2014</li>
+                    <li>XXXXXXXXXXXXXXXXXX</li>
                 </ul>
             </section>
             <section>
